# satt

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
frontend/: index.html
frontend/public/: docs.html
frontend/src/: api.ts
frontend/src/components/: Form.vue  Home.vue
src/: lib.rs  update.rs
src/api/: search.rs
static/: index.html
static/assets/: index-2d235401.css  index-35418220.js
